--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-My GitHub Page
+<html>
+	<head>
+		<title>Nicol</title>
+		<script src='githublive.min.js'></script>
+		<script>var GithubPush = {num_old:5,nodes:['scan/Nicol']}</script>
+	</head>
+	<body>
+		<div id='commits'></div>
+	</body>
+<html>
