--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Nicol</title>
-		<script src='githublive.min.js'></script>
+		<script src='http://www.gitlive.com/githublive.min.js'></script>
 		<script>var GithubPush = {num_old:5,nodes:['scan/Nicol']}</script>
 	</head>
 	<body>
